# MastroCLI

./: .gitignore  README.md  pyproject.toml
.qwen/: settings.json
.qwen/skills/git-commit/: SKILL.md
src/mastrocli/: __init__.py
