[project]
name = "mastrocli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yuliu", email = "yuliu@gzu.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "astropy>=8.0.0",
    "astroquery>=0.4.11",
    "docling>=2.107.0",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
